@@ -408,11 +408,23 @@
    <listitem><para><literal>EXCLUDE_MATCH</literal> - If set to
    <literal>TRUE</literal>, the start and end sequences will not be highlighted,
    only the text between them will.</para></listitem>
+   <listitem><para><literal>NO_ESCAPE</literal> - If set to
+   <literal>TRUE</literal>, the ruleset's escape character will have no
+   effect before the span's end string. Otherwise, the presence of the escape
+   character will cause that occurrence of the end string to be ignored.</para></listitem>
    <listitem><para><literal>NO_LINE_BREAK</literal> - If set to
    <literal>TRUE</literal>, the span will not cross line breaks.</para></listitem>
    <listitem><para><literal>NO_WORD_BREAK</literal> - If set to
    <literal>TRUE</literal>, the span will not cross word breaks.</para></listitem>
   </itemizedlist>
+  <para>
+   Note that the <literal>AT_LINE_START</literal>,
+   <literal>AT_WHITESPACE_END</literal> and
+   <literal>AT_WORD_START</literal> attributes can also be used on the
+   <literal>BEGIN</literal> and <literal>END</literal> elements. Setting these
+   attributes to the same value on both elements has the same effect as
+   setting them on the <literal>SPAN</literal> element.
+  </para>
   <para>
    Here is a <literal>SPAN</literal> that highlights Java string literals,
    which cannot include line breaks:
@@ -452,8 +464,21 @@
    which can match more than one character at the start position.
   </para>
   <para>
+   Any text matched by groups in the <literal>BEGIN</literal> regular
+   expression is substituted in the <literal>END</literal> string. See
+   below for an example of where this is useful.
+  </para>
+  <para>
    Regular expression syntax is described in <xref linkend="regexps" />.
   </para>
+  <para>
+   Here is a <literal>SPAN_REGEXP</literal> rule that highlights
+   <quote>read-ins</quote> in shell scripts:
+  </para>
+  <programlisting>&lt;SPAN_REGEXP HASH_CHAR="&lt;" TYPE="LITERAL1" DELEGATE="LITERAL"&gt;
+    &lt;BEGIN&gt;&lt;![CDATA[&lt;&lt;[[:space:]'"]*([[:alnum:]_]+)[[:space:]'"]*]]&gt;&lt;/BEGIN&gt;
+    &lt;END&gt;$1&lt;/END&gt;
+&lt;/SPAN_REGEXP&gt;</programlisting>
   <para>
    Here is a <literal>SPAN_REGEXP</literal> rule that highlights constructs
    placed between <literal>&lt;#ftl</literal> and <literal>&gt;</literal>,
@@ -463,6 +488,7 @@
     <BEGIN>&lt;#ftl\&gt;</BEGIN>
     <END>&gt;</END>
 </SPAN_REGEXP>]]></programlisting>
+  <para>
  </sect1>
  <sect1 id="mode-rule-eol-span"><title>The EOL_SPAN Tag</title>
   <para>
@@ -683,6 +709,10 @@
   </para></listitem>
   <listitem><para><literal>COMMENT2</literal>
   </para></listitem>
+  <listitem><para><literal>COMMENT3</literal>
+  </para></listitem>
+  <listitem><para><literal>COMMENT4</literal>
+  </para></listitem>
   <listitem><para><literal>FUNCTION</literal>
   </para></listitem>
   <listitem><para><literal>INVALID</literal><!--  - tokens of this type are
@@ -696,11 +726,17 @@
   </para></listitem>
   <listitem><para><literal>KEYWORD3</literal>
   </para></listitem>
+  <listitem><para><literal>KEYWORD4</literal>
+  </para></listitem>
   <listitem><para><literal>LABEL</literal>
   </para></listitem>
   <listitem><para><literal>LITERAL1</literal>
   </para></listitem>
   <listitem><para><literal>LITERAL2</literal>
+  </para></listitem>
+  <listitem><para><literal>LITERAL3</literal>
+  </para></listitem>
+  <listitem><para><literal>LITERAL4</literal>
   </para></listitem>
   <listitem><para><literal>MARKUP</literal>
   </para></listitem>
